fixing overflow for mobile devices

--- a/src/components/ImgGallery.css
+++ b/src/components/ImgGallery.css
@@ -145,5 +145,9 @@
     body{
       background: pink;
      }
+     .container-flex{
+      position: relative;
+      bottom: 100px;
+     }
   }
  
